# SpiderX

./: .gitignore  Gui.py  README.md  cli.py  easy.py  gui.py  main.py  password.txt  pyproject.toml  requirements.txt  success.txt
.github/workflows/: python-app.yml
config/: __init__.py  default.py
core/: browser.py  captcha.py  utils.py
data/: password.txt
playground/: README.md  app.py  pyproject.toml
playground/data/: success.txt
playground/templates/: login.html  messages.html
